<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yt_gray_text">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/yt_gray_text"
        android:elevation="2dp"
        app:liftOnScroll="false">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/yt_gray_text"
            app:title="@string/app_name"
            app:titleTextColor="@color/yt_black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="16dp"
            android:paddingBottom="12dp"
            android:gravity="center_vertical">

            <EditText
                android:id="@+id/editSearch"
                android:layout_width="0dp"
                android:layout_height="46dp"
                android:layout_weight="1"
                android:hint="@string/search_hint"
                android:inputType="text"
                android:drawableStart="@drawable/ic_search"
                android:drawablePadding="10dp"
                android:drawableTint="@color/yt_gray_text"
                style="@style/SearchEditTextStyle" />

            <ImageButton
                android:id="@+id/btnClearSearch"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginStart="6dp"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:src="@drawable/ic_clear"
                android:visibility="gone"
                android:contentDescription="@string/action_clear" />
        </LinearLayout>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/yt_white"
            style="@style/AppTabLayoutStyle" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
